# ERIC

./: README.md  go.mod  package.json
clangport-and-elf2encryptedhex/: CMakeLists.txt
clangport-and-elf2encryptedhex/src/: CMakeLists.txt
clangport-and-elf2encryptedhex/src/clangport/: CMakeLists.txt  LLVMBuild.txt  driver.cpp
clangport-and-elf2encryptedhex/src/elf2encryptedhex/: CMakeLists.txt  COFFDump.cpp  ELFDump.cpp  LLVMBuild.txt  MachODump.cpp  WasmDump.cpp  XCOFFDump.cpp  custom-encryptor.h  elf2encryptedhex.cpp  elf2encryptedhex.h  picosha2.h
encIDE/: CMakeLists.txt
encIDE/src/: CMakeLists.txt  encIDEApp.cpp  encIDEApp.h  encIDEEnc.cpp  encIDEEnc.h  encIDEMain.cpp  encIDEMain.h  encIDESelBits.cpp  encIDESelBits.h  encIDEenc.cpp  encIDEenc.h  encIDEselBits.cpp  encIDEselBits.h  icon.rc  icon.xpm
kasirga-compiler-and-alp/: CMakeLists.txt
kasirga-compiler-and-alp/src/: CMakeLists.txt
kasirga-compiler-and-alp/src/alp/: CMakeLists.txt  COFFDump.cpp  ELFDump.cpp  LLVMBuild.txt  MachODump.cpp  WasmDump.cpp  XCOFFDump.cpp  alp.cpp  alp.h
kasirga-compiler-and-alp/src/kasirgacomp/: CMakeLists (another copy).txt  CMakeLists (copy).txt  CMakeLists.txt  CMakeLists2.txt  CMakeLists4.txt  driver.cpp
kasirga-compiler-and-elf2encryptedhex/: CMakeLists.txt
kasirga-compiler-and-elf2encryptedhex/src/: CMakeLists.txt
kasirga-compiler-and-elf2encryptedhex/src/elf2encryptedhex/: RSA32.h  elf2encryptedhex.cpp  picosha2.h
kasirga-compiler-and-elf2encryptedhex/src/kasirga/: CMakeLists.txt  LLVMBuild.txt  driver.cpp
kasirgaIDE/: CMakeLists.txt
kasirgaIDE/src/: CMakeLists.txt  icon.rc  kasirgaIDEApp.cpp  kasirgaIDEApp.h  kasirgaIDEMain.cpp  kasirgaIDEMain.h  kasirgaIDEenc.cpp  kasirgaIDEenc.h  kasirgaIDEselBits.cpp  kasirgaIDEselBits.h
